--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -2,11 +2,13 @@ name: Readability
 
 on: pull_request
 
+# Also see SCORES_DIR environment variable definition as a step below.
 env:
   PATHS_TO_FILES: This should be a space-delimited selection of paths to files that are changed in the PR that we want to convert to text for scoring
+  SCORES_FILE_NAME: Scores.txt
 
 jobs:
-  getText:
+  scoreText:
     name: Get text to score
     runs-on: ubuntu-latest
     steps:
@@ -26,3 +28,34 @@ jobs:
           npm i
           npm run build
           node . getReadabilityText $PATHS_TO_FILES
+      - name: Set scores directory environment variable using workaround for home path expansion.
+        run: |
+          echo "SCORES_DIR=$HOME/scores" >> $GITHUB_ENV
+      - name: Setup Python
+        uses: actions/setup-python@v4.1.0
+        with:
+            # We need Python version 3.5 or greater for rglob.
+            python-version: '3.6'
+            architecture: 'x64'
+      - name: Install textstat
+        run: pip install textstat
+      - name: Create scores directory.
+        run: mkdir $SCORES_DIR
+      - name: Calculate Readability score.
+        run: python $GITHUB_WORKSPACE/Calculate_Readability_Score.py
+      - name: Extract scores from downloaded artifact file into GitHub environment variable.
+        run: |
+          echo 'SCORES<<\n' >> $GITHUB_ENV
+          cat $SCORES_DIR/$SCORES_FILE_NAME >> $GITHUB_ENV
+          echo '\n' >> $GITHUB_ENV
+      - name: Leave a comment on the PR with the readability score.
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `${{ env.SCORES }}`
+            })
