--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -7,7 +7,7 @@ jobs:
     name: Get text to score
     runs-on: ubuntu-latest
     steps:
-      - Checkout into docdoctor
+      - name: Checkout into docdoctor
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
