--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -7,7 +7,7 @@ jobs:
     name: Get text to score
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
           path: 'docdoctor'
