--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -19,7 +19,8 @@ jobs:
           path: 'docdoctor'
       - name: List changed file paths to variable
         id: listPaths
-        run: echo '::set-output name=CHANGED_FILE_PATHS::${{ steps.getPaths.outputs.all_changed_files }}'
+        run: |
+          echo '::set-output name=CHANGED_FILE_PATHS::${{ steps.getPaths.outputs.all_changed_files }}'
       - name: Get docdoctor
         uses: actions/checkout@v3
         with: 
@@ -35,4 +36,6 @@ jobs:
         run: |
           npm i
           npm run build
+          ls
+          echo '${{ steps.listPaths.outputs.CHANGED_FILE_PATHS }}'
           node . getReadabilityText ${{ steps.listPaths.outputs.CHANGED_FILE_PATHS }}
