Store path directly in var as POC

--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -20,11 +20,11 @@ jobs:
       - name: List changed file paths to variable
         id: listPaths
         run: |
-          absolutePaths=""
-          for filePath in ${{ steps.getPaths.outputs.all_changed_files }}; do
-            absolutePaths="$absolutePaths docdoctor/$filePath"
-          done
-          echo '::set-output name=CHANGED_FILE_PATHS::$absolutePaths'
+          absolutePaths="docdoctor/source/sdk/node/install.txt"
+          # for filePath in ${{ steps.getPaths.outputs.all_changed_files }}; do
+          #  absolutePaths="$absolutePaths docdoctor/$filePath"
+          # done
+          echo '::set-output name=CHANGED_FILE_PATHS::"$absolutePaths"'
       - name: Get docdoctor
         uses: actions/checkout@v3
         with: 
