--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -30,5 +30,5 @@ jobs:
           npm i
           npm run build
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            node . getReadabilityText $GITHUB_WORKSPACE/$file
+            node $GITHUB_WORKSPACE/docdoctor getReadabilityText $GITHUB_WORKSPACE/$file
           done
