--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Parse text from rST.
         run: |
           npm install $GITHUB_WORKSPACE/docdoctor
-          npm run build
+          cd $GITHUB_WORKSPACE/docdoctor && npm run build
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             node $GITHUB_WORKSPACE/docdoctor getReadabilityText $GITHUB_WORKSPACE/$file
           done
