--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -29,10 +29,8 @@ jobs:
         with:
           node-version: 15.x
       - name: Parse text from rST.
-        working-directory: 'docdoctor'
         run: |
-          npm i
-          npm run build
+          pushd docdoctor && npm i && npm run build && popd
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            node . getReadabilityText ../$file
+            node ./docdoctor getReadabilityText $file
           done
