--- a/.github/workflows/readability.yml
+++ b/.github/workflows/readability.yml
@@ -34,3 +34,6 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             node ./docdoctor getReadabilityText $file
           done
+      - name: Checked parsed contents of file (debugging log statement) - hard coded - remove
+        run: |
+        cat output/source/sdk/swift/install.txt
